@@ -29,7 +29,7 @@ requires:
   perl: 5.6.0
 resources:
   bugtracker: https://rt.cpan.org/Public/Dist/Display.html?Name=Error-Pure-Always
-  homepage: https://github.com/tupinek/Error-Pure-Always
+  homepage: https://github.com/michal-josef-spacek/Error-Pure-Always
   license: http://opensource.org/licenses/bsd-license.php
-  repository: git://github.com/tupinek/Error-Pure-Always
+  repository: git://github.com/michal-josef-spacek/Error-Pure-Always
 version: '0.07'
