@@ -18,8 +18,8 @@ requires 'Error::Pure' => 0.22;
 requires 'perl' => '5.6.0';
 resources 'bugtracker' => 'https://rt.cpan.org/Public/Dist/Display.html'.
 	'?Name=Error-Pure-Always';
-resources 'homepage' => 'https://github.com/tupinek/Error-Pure-Always';
-resources 'repository' => 'git://github.com/tupinek/Error-Pure-Always';
+resources 'homepage' => 'https://github.com/michal-josef-spacek/Error-Pure-Always';
+resources 'repository' => 'git://github.com/michal-josef-spacek/Error-Pure-Always';
 test_requires 'English' => 0;
 test_requires 'Error::Pure::Utils' => 0.22;
 test_requires 'Test::More' => 0;
