@@ -64,7 +64,7 @@ ACKNOWLEDGMENTS
     Thanks for Carp::Always module.
 
 REPOSITORY
-    <https://github.com/tupinek/Error-Pure-Always>
+    <https://github.com/michal-josef-spacek/Error-Pure-Always>
 
 AUTHOR
     Michal Špaček <mailto:skim@cpan.org>
