@@ -1,5 +1,6 @@
 0.07
  - Update Module::Install to 1.19 version.
+ - Update author github username.
 
 0.06 2015-09-16T14:59:35+02:00
  - Improve SEE ALSO section in doc.
